src/tess/tl/test/fail/test_fail_tagged_union_bail_not_diverging.tl
#module MyOption

T[a]: | MySome { v: a }
      | MyNone

#module main

main() {
    val       := MyOption.MySome(42)
    s: MySome := val else { 0 }
    s.v
}
